--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-groq>=0.4.0
-openai>=1.0.0
-flask>=3.0.0
-flask-cors>=4.0.0
-speechrecognition>=3.10.0
-pyttsx3>=2.90
-pyaudio>=0.2.11
-python-dotenv>=1.0.0
-requests>=2.31.0
+groq
+openai
+flask
+flask-cors
+speechrecognition
+pyttsx3
+pyaudio
+python-dotenv
+requests
 gunicorn
 
